@@ -1,5 +1,5 @@
 
-### August XX 2022, Release version 0.12.3 ###
+### August XX 2022, Release version 0.13.0 ###
 
   * FIXED:
     * when exporting data, if an error occurred and a retry is done, the text in the warning box is not cleared.
@@ -12,11 +12,12 @@
     * an icon for gusts has been added.
     * an icon to open file has been added.
     * if sensor data are old (>2h), a message is displayed.
+    * a new infowindow has been introduced.
+    * a new way to obtain elevation has been introduced.
 
   * MODIFIED:
     * the stylesheet of few windows have been modified for better consistency with the main window.
     * the 1d forecast page with MF forecast now show data based on daily forecast.
-    * a new infowindow has been introduced.
 
 
 ### June 23 2022, Release version 0.12.2 ###
